--- a/.github/workflows/test-and-deploy.yml
+++ b/.github/workflows/test-and-deploy.yml
@@ -17,6 +17,7 @@ jobs:
         run: cd react-project && npm test
 
   deploy:
+    needs: [test]
     runs-on: ubuntu-latest
     steps:
       - name: Get code
