--- a/.github/workflows/demo1.yml
+++ b/.github/workflows/demo1.yml
@@ -9,10 +9,10 @@ jobs:
       - name: Get code
         uses: actions/checkout@v3
       - name: Install dependencies
-        run: npm ci
+        run: cd project-2 && npm ci
       - name: Test code
-        run: npm run test
+        run: cd project-2 && npm run test
       - name: Build code
-        run: npm run build
+        run: cd project-2 && npm run build
       - name: Deploy project
         run: echo "Deploying..."
