--- a/.github/workflows/run-tests-action.yml
+++ b/.github/workflows/run-tests-action.yml
@@ -1,5 +1,5 @@
 name: Test Project
-on: push
+on: workflow_dispatch
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -15,4 +15,3 @@ jobs:
         run: cd react-project && npm ci
       - name: Run tests
         run: cd react-project && npm test
-
