--- a/.github/workflows/demo1.yml
+++ b/.github/workflows/demo1.yml
@@ -3,6 +3,9 @@ on:
   pull_request:
     types:
       - opened
+  push:
+    branches:
+      - master
 jobs:
   deploy:
     runs-on: ubuntu-latest
